add drawer and list components

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,10 +1,10 @@
 $primary: #5B8E7D;
 $success: #22bb33;
 $bg-color: #FFF;
+$disabled: #EBEBE4;
 
 $text-color: #FFF;
 
 $variants: (primary: $primary, success: $success);
-
 
 $index-modal: 2;
